# cosmic-applet-productivity

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE.md  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
cosmic-applet-gmail/: Cargo.toml  LICENSE.md  README.md  justfile
cosmic-applet-gmail/src/: app.rs  config.rs  main.rs  settings.rs  ui.rs
cosmic-applet-google-agenda/src/: app.rs  calendar.rs  config.rs  debug.rs  settings.rs  ui.rs
cosmic-applet-quotabar/: Cargo.toml  LICENSE
cosmic-applet-quotabar/data/: com.github.ragusa87.CosmicAppletQuotaBar.desktop
cosmic-applet-quotabar/src/: anthropic.rs  app.rs  atomic.rs  config.rs  main.rs  models.rs  openai.rs  settings.rs  ui.rs
cosmic-applet-slack/: Cargo.toml
cosmic-applet-slack/data/: com.github.ragusa87.CosmicAppletSlack.desktop
cosmic-applet-slack/src/: app.rs  config.rs  debug.rs  main.rs  slack.rs  ui.rs
cosmic-applet-taxi/: Cargo.toml  init.md
cosmic-applet-taxi/data/: com.github.ragusa87.CosmicAppletTaxi.desktop
cosmic-applet-taxi/src/: app.rs  atomic.rs  config.rs  export.rs  lock.rs  main.rs  sessions.rs  settings.rs  state.rs  taxi.rs  ui.rs
cosmic-applet-windowrules/: Cargo.toml
cosmic-applet-windowrules/data/: com.github.ragusa87.CosmicAppletWindowRules.desktop
cosmic-applet-windowrules/src/: app.rs  apply.rs  config.rs  dbus.rs  debug.rs  main.rs  models.rs  settings.rs  wayland.rs
cosmic-google-common/: Cargo.toml
cosmic-google-common/src/: auth.rs  lib.rs  notify.rs  secrets.rs
data/: com.github.ragusa87.CosmicAppletGmail.desktop  io.github.cosmic_google_agenda_panel.desktop
src/: app.rs  auth.rs  calendar.rs  config.rs  debug.rs  main.rs  secrets.rs  settings.rs  ui.rs
