[package]
name = "cosmic-applet-gmail"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "COSMIC panel applet that shows the Gmail unread count"
repository = "https://github.com/ragusa87/cosmic-applet-gmail"

[[bin]]
name = "cosmic-applet-gmail"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
cosmic-google-common = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

libcosmic = { workspace = true }
cosmic-config = { workspace = true }
cosmic-config-derive = { workspace = true }
