[package]
name = "cosmic-applet-slack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "COSMIC panel applet that shows the Slack unread count by reading the tray-icon tooltip over DBus"
repository = "https://github.com/ragusa87/cosmic-applet-gmail"

[[bin]]
name = "cosmic-applet-slack"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zbus = { workspace = true }

libcosmic = { workspace = true }
cosmic-config = { workspace = true }
cosmic-config-derive = { workspace = true }
