[package]
name = "cosmic-google-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared OAuth2 + Secret Service helpers for the cosmic-applet-google bundle"

[dependencies]
anyhow = { workspace = true }
keyring = { workspace = true }
notify-rust = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
